fix(index): add links to ICS files

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,10 @@
     <main>
       <h1>Swiss Tchoukball feeds</h1>
       <ul>
-        <li><a href="/news-fr.xml">News - Français</a></li>
-        <li><a href="/news-de.xml">News - Deutsch</a></li>
+        <li><a href="/news-fr.xml">News - Français (RSS)</a></li>
+        <li><a href="/news-de.xml">News - Deutsch (RSS)</a></li>
+        <li><a href="/events-fr.xml">Events - Français (ICS)</a></li>
+        <li><a href="/events-de.xml">Events - Deutsch (ICS)</a></li>
       </ul>
     </main>
     <footer>
