fix(events): move files to dedicated subfolder

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,16 @@
   <body>
     <main>
       <h1>Swiss Tchoukball feeds</h1>
+      <h2>News as RSS</h2>
       <ul>
-        <li><a href="/news-fr.xml">News - Français (RSS)</a></li>
-        <li><a href="/news-de.xml">News - Deutsch (RSS)</a></li>
-        <li><a href="/events-fr.xml">Events - Français (ICS)</a></li>
-        <li><a href="/events-de.xml">Events - Deutsch (ICS)</a></li>
+        <li><a href="/news-fr.xml">News - Français</a></li>
+        <li><a href="/news-de.xml">News - Deutsch</a></li>
+      </ul>
+
+      <h2>Events as ICS</h2>
+      <ul>
+        <li><a href="/events/all-fr.xml">All events - Français</a></li>
+        <li><a href="/events/all-de.xml">All events - Deutsch</a></li>
       </ul>
     </main>
     <footer>
