fix(index): fix link to event files

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
 
       <h2>Events as ICS</h2>
       <ul>
-        <li><a href="/events/all-fr.xml">All events - Français</a></li>
-        <li><a href="/events/all-de.xml">All events - Deutsch</a></li>
+        <li><a href="/events/all-fr.ics">All events - Français</a></li>
+        <li><a href="/events/all-de.ics">All events - Deutsch</a></li>
       </ul>
     </main>
     <footer>
