--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <title>Swiss Tchoukball feeds</title>
     <style type="text/css">
       body {
-        font-family: Helvetica, Arial, sans-serif;
+        font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+          "Segoe UI Symbol";
       }
     </style>
   </head>
